# nicolase_onthego

./: README.md
NicoLAse/Arduino/Codes/: how_to_run
NicoLAse/Arduino/Codes/laser_control/: laser_control.ino
NicoLAse/Arduino/Codes/laser_control/AOTFcontroller/: AOTFcontroller.ino
NicoLAse/Arduino/Codes/laser_loop/: laser_loop.ino
NicoLAse/Arduino/Libraries/: how_to_run
NicoLAse/Arduino/Libraries/LaserLibrary/: LaserLibrary.h
NicoLAse/Arduino/Libraries/MMArduino/: MMArduino.cpp  MMArduino.h  MMArduino.vcxproj  MMArduino.vcxproj.filters  Makefile.am
NicoLAse/Arduino/Libraries/MMArduino/MMDevice/: DeviceBase.h  DeviceThreads.h  DeviceUtils.h  ImageMetadata.h  MMDevice.h  MMDeviceConstants.h
NicoLAse/Hardware schematics/: component_list  laserboard.sch
NicoLAse/Micromanger files/: NicoLase_config_file.cfg  NicoLase_config_file.txt  how_to_run
