AM_CXXFLAGS = $(MMDEVAPI_CXXFLAGS)
deviceadapter_LTLIBRARIES = libmmgr_dal_Arduino.la
libmmgr_dal_Arduino_la_SOURCES = MMArduino.cpp MMArduino.h \
   ../../MMDevice/MMDevice.h ../../MMDevice/DeviceBase.h
libmmgr_dal_Arduino_la_LIBADD = $(MMDEVAPI_LIBADD)
libmmgr_dal_Arduino_la_LDFLAGS = $(MMDEVAPI_LDFLAGS)